# moore_machine

./: .gitignore  README.md  dune-project  moore_machine.opam
_build/: log
examples/: ones_1mod3.json  turnstile.json
lib/: dune  from_json.ml  from_json.mli  machine.ml  machine.mli  running_machine.ml  running_machine.mli  state.ml  state.mli  tape.ml  tape.mli
test/: dune
