(lang dune 3.14)

(name moore_machine)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Lenart Miklavič")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name moore_machine)
 (synopsis "Mooreovi avtomati")
 (description "Projektno delo pri predmetu Programiranje 1")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
