(lang dune 3.14)

(name moore_machine)

(generate_opam_files true)

(source
 (github miklaviclenart/moore_machine))

(authors "Lenart Miklavič")

(package
 (name moore_machine)
 (synopsis "Mooreovi avtomati")
 (description "Projektno delo pri predmetu Programiranje 1")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
